--- a/Responsive Web Design/Build a Product Landing Page/style.css
+++ b/Responsive Web Design/Build a Product Landing Page/style.css
@@ -115,7 +115,7 @@ header {
 	text-align: center;
 	background-color: rgb(214, 214, 214);
 	height: 10%;
-	width: 90%;
+	width: max-content;
 	margin: 0;
 	padding: 1rem;
 	font-size: 1.2rem;
@@ -185,4 +185,56 @@ footer span {
 }
 .container-footer span {
 	color: rgb(105, 105, 105);
+}
+
+@media screen and (max-width: 600px) {
+	#header-img {
+		padding: 1.5rem;
+		height: 30%;
+	}
+	#nav-bar {
+		display: none;
+	}
+	#form {
+		margin-top: 10vh;
+		margin-left: 10vh;
+	}
+	#form label {
+		margin-bottom: 1rem;
+		line-height: 2rem;
+	}
+	#features {
+		margin: 0;
+		padding: 0;
+	}
+	#features h2 {
+		text-align: center;
+	}
+	.video {
+		padding: 0 1rem;
+		width: 100%;
+	}
+	#prices {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 0;
+	}
+	.trombone {
+		margin: 0.5rem;
+	}
+
+	.trombone .title {
+		width: -webkit-fill-available;
+	}
+
+	footer {
+		padding: initial;
+	}
+	.container-footer {
+		width: -webkit-fill-available;
+		height: auto;
+		margin: 0 1rem;
+		padding: 0;
+	}
 }
